--- a/templates/base.html
+++ b/templates/base.html
@@ -90,7 +90,7 @@
           {% block titlecontent %} {% endblock %}
         </div>
 
-        <div class="container-fluid">
+        <div class="col-12">
           {% block content %} {% endblock %}
         </div>
       </div>
