--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -12,6 +12,7 @@
 {% endblock %}
 
 {% block content %}
+<div class="container-fluid">
 
 <div class="row justify-content-center mt-3">
     <form class="cs-form shadow-lg" method="post" style="background-color: white;  padding-bottom: 20px;">
@@ -83,6 +84,7 @@
         </div>
 
     </form>
+</div>
 </div>
 
 {% endblock%}
