--- a/templates/client_list.html
+++ b/templates/client_list.html
@@ -4,23 +4,25 @@
 
 {% block title %} <title> Add task </title> {% endblock %}
 
-{% block titlecontent %} 
+{% block titlecontent %}
 
 <div class="row shadow-sm " style="margin-top: 0px; padding: 7px; background-color: #fff; color: #00838f;">
-  <h2 style="font-family: Racing Sans One;">Add Client</h2>
-</div> 
+    <h2 style="font-family: Racing Sans One;">Add Client</h2>
+</div>
 {% endblock %}
 
 {% block content %}
 <div class="container-fluid">
     <div class="row justify-content-center mt-3 p-3">
-        <form class="cs-form shadow-sm" method="post" style="background-color: white;  padding-bottom: 20px;" enctype="multipart/form-data">
+        <form class="cs-form shadow-sm" method="post" style="background-color: white;  padding-bottom: 20px;"
+            enctype="multipart/form-data">
             {% csrf_token %}
             <div>
                 <div class="row mt-3 p-3">
                     <div class="col">
                         <label for="client" class="form-label" style="color: #00838f;">Client Name</label>
-                        <input type="text-l" class="form-control" id="task" placeholder="Task name" name="name" required>
+                        <input type="text-l" class="form-control" id="task" placeholder="Task name" name="name"
+                            required>
                     </div>
                     <div class="col mt-4 p-2">
                         <label for="file" class="form-label" style="color: #00838f;">Upload File</label>
@@ -33,39 +35,82 @@
                     <label for="client" class="form-label" style="color: #00838f;">More Info</label>
                     <textarea name="description" id="" cols="10" rows="5"></textarea>
                 </div>
-              
+
                 <div class="row mt-3">
                     <div class="col-8"></div>
                     <div class="col-4">
                         <button type="submit" class="btn btn-lg btn-floating w-100 shadow-sm"
                             style="background-color: #00838f; border: none; color: #fff; font-family: DM Sans;">
-                            <i class="bi bi bi-plus-square" style="color: #fff;"></i>  Add</button>
-    
+                            <i class="bi bi bi-plus-square" style="color: #fff;"></i> Add</button>
+
                     </div>
                 </div>
-    
+
             </div>
-    
+
         </form>
     </div>
 
     <div class="row row-cols-1 row-cols-md-4 g-4 " style="margin-bottom: 30px;">
-        
+
         {% for clnt in docs %}
         <div class="col">
-        
-        <div class="card " style="height: 13rem; overflow-x: auto; box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
-            <div class="card-body">
-              <h5 class="card-title">{{ clnt.name }}</h5>
-              <h6 class="card-subtitle mb-2 text-muted">{{ clnt.description }}</h6>
+
+            <div class="card "
+                style="height: 13rem; overflow-x: auto; box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
+                <div class="card-body">
+                    <h5 class="card-title">{{ clnt.name }}</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">{{ clnt.description }}</h6>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#clientModal" data-client-name="{{ clnt.name }}" data-client-description="{{ clnt.description }}">
+                        View Details
+                    </button>
+
+                </div>
 
             </div>
-        
         </div>
-         </div>
         {% endfor %}
 
+    </div>
 </div>
+
+<div class="modal fade" id="clientModal" tabindex="-1" role="dialog" aria-labelledby="clientModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="clientModalLabel">Client Details</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <!-- Client information will be displayed here -->
+                <h5 class="modal-title" id="modalClientName"></h5>
+                <p id="modalClientDescription"></p>
+            </div>
+        </div>
+    </div>
 </div>
+
+<script>
+    $(document).ready(function() {
+        $('.view-details').click(function() {
+            var clientId = $(this).data('client-id');
+            $.ajax({
+                url: '/get_client_details/' + clientId + '/',
+                type: 'GET',
+                dataType: 'json',
+                success: function(data) {
+                    $('#modalClientName').text(data.name);
+                    $('#modalClientDescription').text(data.description);
+                    $('#clientModal').modal('show');
+                },
+                error: function() {
+                    // Handle error
+                }
+            });
+        });
+    });
+</script>
 
 {% endblock %}
