modal added in client part

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,11 @@
       font-size: 17px;
       background-color: #fff ;
     }
+    .formatted-text {
+    white-space: pre-line;
+}
+
+    
   </style>
 </head>
 
