modified in client part and home

--- a/templates/client_list.html
+++ b/templates/client_list.html
@@ -66,6 +66,10 @@
         </form>
     </div>
 
+    <div class="row text-center p-2">
+        <h5 style=" text-decoration: underline;">Client List</h5>
+    </div>
+
     <div class="row row-cols-1 row-cols-md-4 g-4 " style="margin-bottom: 30px;">
 
         {% for clnt in docs %}
