--- a/templates/home.html
+++ b/templates/home.html
@@ -25,16 +25,16 @@
   <div class="col  m-2 p-1 text-center"
     style=" background-color: #AA00FF; box-shadow: 0px 13px 8px -8px rgba(0, 0, 0, 0.45);">
     <a style="color: #fff;"> <i class="bi bi-hourglass-split fs-5" style="color: #fff;"></i> Total Completed Task:</a>
-    <h5 style="color: #fff;">{{ count }}</h5>
+    <h5 style="color: #fff;">{{ complete_task }}</h5>
   </div>
   <div class="col m-2 p-1 text-center"
     style=" background-color: #00C853; box-shadow: 0px 13px 8px -8px rgba(0, 0, 0, 0.45);">
-    <a style="color: #fff;"> <i class="bi bi-hourglass-split fs-5" style="color: #fff;"></i> Total Pending Task:</a>
-    <h5 style="color: #fff;">{{ count }}</h5>
+    <a style="color: #fff;"> <i class="bi bi-hourglass-split fs-5" style="color: #fff;"></i> Total Client:</a>
+    <h5 style="color: #fff;">{{ clnum }}</h5>
   </div>
-  <div class="col m-2 p-1 text-center"
+  <div class="col m-2 p-1 text-center" 
     style=" background-color: #6200EA; box-shadow: 0px 13px 8px -8px rgba(0, 0, 0, 0.45);">
-    <a style="color: #fff;"> <i class="bi bi-hourglass-split fs-5" style="color: #fff;"></i> Total Pending Task:</a>
+    <a  style="color: #fff;"> <i class="bi bi-hourglass-split fs-5" style="color: #fff;"></i> Total Pending Task:</a>
     <h5 style="color: #fff;">{{ count }}</h5>
   </div>
 </div>
