--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
   <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'icofont/icofont.min.css' %}">
   <link
-    href='https://fonts.googleapis.com/css?family=Encode Sans Condensed|Racing Sans One|Audiowide|DM Sans|Trirong|Yanone Kaffeesatz'
+    href='https://fonts.googleapis.com/css?family=Encode Sans Condensed|Racing Sans One|Audiowide|DM Sans|Trirong|Yanone Kaffeesatz|Bungee|Geo'
     rel='stylesheet'>
   <style>
     body {
