--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -7,7 +7,7 @@
 {% block titlecontent %} 
 
 <div class="row shadow-sm " style="margin-top: 0px; padding: 7px; background-color: #fff; color: #00838f;">
-  <h2 style="font-family: Racing Sans One;">Add Tasks</h2>
+  <h2 style="font-family: Bungee;">Add Tasks</h2>
 </div> 
 {% endblock %}
 
