--- a/templates/client_list.html
+++ b/templates/client_list.html
@@ -7,7 +7,7 @@
 {% block titlecontent %}
 
 <div class="row shadow-sm " style="margin-top: 0px; padding: 7px; background-color: #fff; color: #00838f;">
-    <h2 style="font-family: Racing Sans One;">Add Client</h2>
+    <h2 style="font-family: Bungee;">Add Client</h2>
 </div>
 {% endblock %}
 
@@ -18,7 +18,7 @@
             enctype="multipart/form-data">
             {% csrf_token %}
             <div class="p-3">
-                <div class="row">
+                <div class="row ">
 
                     <div class="col">
 
@@ -67,24 +67,25 @@
     </div>
 
     <div class="row text-center p-2">
-        <h5 style=" text-decoration: underline;">Client List</h5>
+        <h5 style=" font-family: Geo; text-decoration: underline;">Client List (Click On Client Name For More Info)</h5>
     </div>
 
-    <div class="row row-cols-1 row-cols-md-4 g-4 " style="margin-bottom: 30px;">
+    <div class="row row-cols-1 row-cols-md-4 g-1 " style="margin-bottom: 30px;">
 
         {% for clnt in docs %}
-        <div class="col">
+        <div class="col text-center">
 
-            <div class="card "
-                style=" box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); background-color: #00C853;">
+            <div class="card show-client border-success" data-bs-toggle="modal"
+            data-bs-target="#clientModal" data-client-id="{{ clnt.id }}"
+                style=" border-radius: 0; box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
                 <div class="card-body">
-                    <h5 class="card-title" style="color: #fff;">{{ clnt.name }}</h5>
-                    <button type="button" id="cb" class="btn btn-outline-light show-client" data-bs-toggle="modal"
-                        data-bs-target="#clientModal" data-client-id="{{ clnt.id }}">
-                        More Info
-                    </button>
-
+                    <h5 class="card-title" style="color: #000;">{{ clnt.name }}</h5>
                 </div>
+                <style>
+                    .card:hover {
+                        background-color: #00838f;
+                    }
+                </style>
 
             </div>
         </div>
